--- a/checkout.html
+++ b/checkout.html
@@ -82,6 +82,14 @@
         </div>
       </div>
     </div>
+
+
+    <!-- <script stc="https://unpkg.com/dayjs@1.11.10/dayjs.min.js"></script> -->
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script> -->
+    <!-- <script>dayjs().format()</script> -->
+
     <script type="module" src="scripts/checkout.js"></script>
+    <div></div>
   </body>
 </html>
